--- a/_out/html/html-single/find/index.html
+++ b/_out/html/html-single/find/index.html
@@ -843,6 +843,16 @@ window.onload = () => {
         "fibonacci  and  factorial",
         "What about  Functorial ?"]}},
      "address": "/"}],
+   "twiceAccumulatingSafeDivIsOne":
+   [{"id": "twiceAccumulatingSafeDivIsOne",
+     "data":
+     {"/#twiceAccumulatingSafeDivIsOne":
+      {"display": "twiceAccumulatingSafeDivIsOne",
+       "context":
+       ["PSBP Documentation",
+        "Programming With Failure",
+        "twiceAccumulatingSafeDivIsOne"]}},
+     "address": "/"}],
    "trueToLeftFalseToRightF":
    [{"id": "trueToLeftFalseToRightF",
      "data":
@@ -1055,6 +1065,16 @@ window.onload = () => {
       {"display": "minusOne",
        "context": ["PSBP Documentation", "fibonacci  and  factorial"]}},
      "address": "/"}],
+   "materializeWithValidation":
+   [{"id": "materializeWithValidation",
+     "data":
+     {"/#materializeWithValidation":
+      {"display": "materializeWithValidation",
+       "context":
+       ["PSBP Documentation",
+        "Programming With Failure",
+        "ProgramWithValidation"]}},
+     "address": "/"}],
    "materializeWithState":
    [{"id": "materializeWithState",
      "data":
@@ -1079,6 +1099,16 @@ window.onload = () => {
      {"/#materializeReactive":
       {"display": "materializeReactive",
        "context": ["PSBP Documentation", "ReactiveProgram"]}},
+     "address": "/"}],
+   "materializeActiveWithValidation":
+   [{"id": "materializeActiveWithValidation",
+     "data":
+     {"/#materializeActiveWithValidation":
+      {"display": "materializeActiveWithValidation",
+       "context":
+       ["PSBP Documentation",
+        "Programming With Failure",
+        "ProgramWithValidation"]}},
      "address": "/"}],
    "materializeActiveWithState":
    [{"id": "materializeActiveWithState",
@@ -1263,12 +1293,52 @@ window.onload = () => {
       {"display": "addF",
        "context": ["PSBP Documentation", "fibonacci  and  factorial"]}},
      "address": "/"}],
+   "addAccumulatingSafeDivProduct":
+   [{"id": "addAccumulatingSafeDivProduct",
+     "data":
+     {"/#addAccumulatingSafeDivProduct":
+      {"display": "addAccumulatingSafeDivProduct",
+       "context":
+       ["PSBP Documentation",
+        "Programming With Failure",
+        "addAccumulatingSafeDivProduct"]}},
+     "address": "/"}],
    "add":
    [{"id": "add",
      "data":
      {"/#add":
       {"display": "add",
        "context": ["PSBP Documentation", "fibonacci  and  factorial"]}},
+     "address": "/"}],
+   "accumulatingSafeDivProduct":
+   [{"id": "accumulatingSafeDivProduct",
+     "data":
+     {"/#accumulatingSafeDivProduct":
+      {"display": "accumulatingSafeDivProduct",
+       "context":
+       ["PSBP Documentation",
+        "Programming With Failure",
+        "accumulatingSafeDivProduct"]}},
+     "address": "/"}],
+   "accumulatingSafeDivIsOne":
+   [{"id": "accumulatingSafeDivIsOne",
+     "data":
+     {"/#accumulatingSafeDivIsOne":
+      {"display": "accumulatingSafeDivIsOne",
+       "context":
+       ["PSBP Documentation",
+        "Programming With Failure",
+        "accumulatingSafeDivIsOne"]}},
+     "address": "/"}],
+   "accumulatingSafeDiv":
+   [{"id": "accumulatingSafeDiv",
+     "data":
+     {"/#accumulatingSafeDiv":
+      {"display": "accumulatingSafeDiv",
+       "context":
+       ["PSBP Documentation",
+        "Programming With Failure",
+        "accumulatingSafeDiv  revisited"]}},
      "address": "/"}],
    "WithState.writeState":
    [{"id": "WithState___writeState",
@@ -1358,6 +1428,16 @@ window.onload = () => {
       {"display": "Reactive",
        "context": ["PSBP Documentation", "ReactiveProgram"]}},
      "address": "/"}],
+   "ProgramWithValidation":
+   [{"id": "ProgramWithValidation",
+     "data":
+     {"/#ProgramWithValidation":
+      {"display": "ProgramWithValidation",
+       "context":
+       ["PSBP Documentation",
+        "Programming With Failure",
+        "ProgramWithValidation"]}},
+     "address": "/"}],
    "ProgramWithState":
    [{"id": "ProgramWithState",
      "data":
@@ -1391,6 +1471,36 @@ window.onload = () => {
       {"display": "Positional",
        "context":
        ["PSBP Documentation", "Positional Programming", "class Positional"]}},
+     "address": "/"}],
+   "Monoid.ν":
+   [{"id": "Monoid______",
+     "data":
+     {"/#Monoid______":
+      {"display": "ν",
+       "context":
+       ["PSBP Documentation",
+        "Programming With Failure",
+        "instance WithFailure ε  (validation)"]}},
+     "address": "/"}],
+   "Monoid.combine":
+   [{"id": "Monoid___combine",
+     "data":
+     {"/#Monoid___combine":
+      {"display": "combine",
+       "context":
+       ["PSBP Documentation",
+        "Programming With Failure",
+        "instance WithFailure ε  (validation)"]}},
+     "address": "/"}],
+   "Monoid":
+   [{"id": "Monoid",
+     "data":
+     {"/#Monoid":
+      {"display": "Monoid",
+       "context":
+       ["PSBP Documentation",
+        "Programming With Failure",
+        "instance WithFailure ε  (validation)"]}},
      "address": "/"}],
    "Functorial.andThenF":
    [{"id": "Functorial___andThenF",
@@ -1454,7 +1564,7 @@ window.onload = () => {
        "context":
        ["PSBP Documentation",
         "Programming With Failure",
-        "instance WithFailure ε"]}},
+        "instance WithFailure ε  (fail fast)"]}},
      "address": "/"}],
    "FailureT":
    [{"id": "FailureT",
@@ -1464,7 +1574,7 @@ window.onload = () => {
        "context":
        ["PSBP Documentation",
         "Programming With Failure",
-        "instance WithFailure ε"]}},
+        "instance WithFailure ε  (fail fast)"]}},
      "address": "/"}],
    "Creational.product":
    [{"id": "Creational___product",
