--- a/_out/html/html-single/find/index.html
+++ b/_out/html/html-single/find/index.html
@@ -1034,7 +1034,7 @@ window.onload = () => {
      {"/#oneF":
       {"display": "oneF",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "Primitives"]}},
      "address": "/"}],
    "one":
    [{"id": "one",
@@ -1042,7 +1042,7 @@ window.onload = () => {
      {"/#one":
       {"display": "one",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "Primitives"]}},
      "address": "/"}],
    "multiplyF":
    [{"id": "multiplyF",
@@ -1050,7 +1050,7 @@ window.onload = () => {
      {"/#multiplyF":
       {"display": "multiplyF",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "Primitives"]}},
      "address": "/"}],
    "multiply":
    [{"id": "multiply",
@@ -1058,7 +1058,7 @@ window.onload = () => {
      {"/#multiply":
       {"display": "multiply",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "Primitives"]}},
      "address": "/"}],
    "modifyStateWith":
    [{"id": "modifyStateWith",
@@ -1077,7 +1077,7 @@ window.onload = () => {
      {"/#minusTwoF":
       {"display": "minusTwoF",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "Primitives"]}},
      "address": "/"}],
    "minusTwo":
    [{"id": "minusTwo",
@@ -1085,7 +1085,7 @@ window.onload = () => {
      {"/#minusTwo":
       {"display": "minusTwo",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "Primitives"]}},
      "address": "/"}],
    "minusOneF":
    [{"id": "minusOneF",
@@ -1093,7 +1093,7 @@ window.onload = () => {
      {"/#minusOneF":
       {"display": "minusOneF",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "Primitives"]}},
      "address": "/"}],
    "minusOne":
    [{"id": "minusOne",
@@ -1101,7 +1101,7 @@ window.onload = () => {
      {"/#minusOne":
       {"display": "minusOne",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "Primitives"]}},
      "address": "/"}],
    "materializeWithValidation":
    [{"id": "materializeWithValidation",
@@ -1171,8 +1171,7 @@ window.onload = () => {
      "data":
      {"/#materializeActive":
       {"display": "materializeActive",
-       "context":
-       ["PSBP Documentation", "Creational  theorems", "ActiveProgram"]}},
+       "context": ["PSBP Documentation", "ActiveProgram"]}},
      "address": "/"}],
    "let_":
    [{"id": "let_",
@@ -1195,7 +1194,7 @@ window.onload = () => {
      {"/#isZeroF":
       {"display": "isZeroF",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "Primitives"]}},
      "address": "/"}],
    "isZero":
    [{"id": "isZero",
@@ -1203,7 +1202,7 @@ window.onload = () => {
      {"/#isZero":
       {"display": "isZero",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "Primitives"]}},
      "address": "/"}],
    "isOneF":
    [{"id": "isOneF",
@@ -1211,7 +1210,7 @@ window.onload = () => {
      {"/#isOneF":
       {"display": "isOneF",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "Primitives"]}},
      "address": "/"}],
    "isOne":
    [{"id": "isOne",
@@ -1219,7 +1218,7 @@ window.onload = () => {
      {"/#isOne":
       {"display": "isOne",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "Primitives"]}},
      "address": "/"}],
    "isNotZeroF":
    [{"id": "isNotZeroF",
@@ -1349,7 +1348,7 @@ window.onload = () => {
      {"/#fibonacci":
       {"display": "fibonacci",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "fibonacci"]}},
      "address": "/"}],
    "factorial":
    [{"id": "factorial",
@@ -1357,7 +1356,7 @@ window.onload = () => {
      {"/#factorial":
       {"display": "factorial",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "factorial"]}},
      "address": "/"}],
    "else_":
    [{"id": "else_",
@@ -1372,42 +1371,42 @@ window.onload = () => {
      "data":
      {"/#creational_onlyFirst_sequential":
       {"display": "creational_onlyFirst_sequential",
-       "context": ["PSBP Documentation", "Creational  theorems"]}},
+       "context": ["PSBP Documentation", "Theorems", "Creational  theorems"]}},
      "address": "/"}],
    "creational_onlyFirst_first":
    [{"id": "creational_onlyFirst_first",
      "data":
      {"/#creational_onlyFirst_first":
       {"display": "creational_onlyFirst_first",
-       "context": ["PSBP Documentation", "Creational  theorems"]}},
+       "context": ["PSBP Documentation", "Theorems", "Creational  theorems"]}},
      "address": "/"}],
    "creational_onlyFirst_assoc":
    [{"id": "creational_onlyFirst_assoc",
      "data":
      {"/#creational_onlyFirst_assoc":
       {"display": "creational_onlyFirst_assoc",
-       "context": ["PSBP Documentation", "Creational  theorems"]}},
+       "context": ["PSBP Documentation", "Theorems", "Creational  theorems"]}},
      "address": "/"}],
    "creational_onlyFirst_asProgram'":
    [{"id": "creational_onlyFirst_asProgram___",
      "data":
      {"/#creational_onlyFirst_asProgram___":
       {"display": "creational_onlyFirst_asProgram'",
-       "context": ["PSBP Documentation", "Creational  theorems"]}},
+       "context": ["PSBP Documentation", "Theorems", "Creational  theorems"]}},
      "address": "/"}],
    "creational_onlyFirst_asProgram":
    [{"id": "creational_onlyFirst_asProgram",
      "data":
      {"/#creational_onlyFirst_asProgram":
       {"display": "creational_onlyFirst_asProgram",
-       "context": ["PSBP Documentation", "Creational  theorems"]}},
+       "context": ["PSBP Documentation", "Theorems", "Creational  theorems"]}},
      "address": "/"}],
    "creational_onlyFirst_applyAtSecond":
    [{"id": "creational_onlyFirst_applyAtSecond",
      "data":
      {"/#creational_onlyFirst_applyAtSecond":
       {"display": "creational_onlyFirst_applyAtSecond",
-       "context": ["PSBP Documentation", "Creational  theorems"]}},
+       "context": ["PSBP Documentation", "Theorems", "Creational  theorems"]}},
      "address": "/"}],
    "assoc":
    [{"id": "assoc",
@@ -1436,7 +1435,7 @@ window.onload = () => {
      {"/#addF":
       {"display": "addF",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "Primitives"]}},
      "address": "/"}],
    "addAccumulatingSafeDivProduct":
    [{"id": "addAccumulatingSafeDivProduct",
@@ -1454,7 +1453,7 @@ window.onload = () => {
      {"/#add":
       {"display": "add",
        "context":
-       ["PSBP Documentation", "fibonacci  and  factorial", "def if_"]}},
+       ["PSBP Documentation", "fibonacci  and  factorial", "Primitives"]}},
      "address": "/"}],
    "accumulatingSafeDivProduct":
    [{"id": "accumulatingSafeDivProduct",
@@ -1900,16 +1899,14 @@ window.onload = () => {
      "data":
      {"/#ActiveProgram":
       {"display": "ActiveProgram",
-       "context":
-       ["PSBP Documentation", "Creational  theorems", "ActiveProgram"]}},
+       "context": ["PSBP Documentation", "ActiveProgram"]}},
      "address": "/"}],
    "Active":
    [{"id": "Active",
      "data":
      {"/#Active":
       {"display": "Active",
-       "context":
-       ["PSBP Documentation", "Creational  theorems", "ActiveProgram"]}},
+       "context": ["PSBP Documentation", "ActiveProgram"]}},
      "address": "/"}]}},
  "Verso.Genre.Manual.doc.tech":
  {"title": "Terminology",
@@ -2012,7 +2009,7 @@ if(name) {
             <div class="split-toc book">
               <div class="title">
                 <label for="--verso-manual-toc-----bookRoot" class="toggle-split-toc"><input type="checkbox" class="toggle-split-toc" id="--verso-manual-toc-----bookRoot" checked="checked"></label><span class="">Table of Contents</span></div>
-              <table><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--About">About</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Naming-conventions">Naming conventions</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Programs-versus-Computations">Programs versus Computations</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--The--PSBP--library-type-classes">The <code>PSBP</code> library type classes</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--fibonacci--and--factorial"><code>fibonacci</code> and <code>factorial</code></a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Laws">Laws</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Computation-Valued-Functions">Computation Valued Functions</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Theorems">Theorems</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Creational--theorems"><code>Creational</code> theorems</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--ReactiveProgram"><code>ReactiveProgram</code></a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Positional-Programming">Positional Programming</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Programming-With-State">Programming With State</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Programming-With-Failure">Programming With Failure</a></td></tr></table></div>
+              <table><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--About">About</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Naming-conventions">Naming conventions</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Programs-versus-Computations">Programs versus Computations</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--The--PSBP--library-type-classes">The <code>PSBP</code> library type classes</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--fibonacci--and--factorial"><code>fibonacci</code> and <code>factorial</code></a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Laws">Laws</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Computation-Valued-Functions">Computation Valued Functions</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Theorems">Theorems</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--ActiveProgram"><code>ActiveProgram</code></a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--ReactiveProgram"><code>ReactiveProgram</code></a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Positional-Programming">Positional Programming</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Programming-With-State">Programming With State</a></td></tr><tr class="current numbered"><td class="num"></td><td><a href="#PSBP-Documentation--Programming-With-Failure">Programming With Failure</a></td></tr></table></div>
             </div>
           </div>
         <div class="last"></div>
