--- a/_out/html/html-multi/Naming-conventions/index.html
+++ b/_out/html/html-multi/Naming-conventions/index.html
@@ -807,7 +807,7 @@ As a consequence, in this document, the word programming means (the process of) 
             <p>
               I hope that this naming convention does not lead to any confusion.</p>
             <p>
-              <code>PSBP</code> stands for "Program Specification Based Programming" (using the naming conventions above).</p>
+              "Program Specification Based Programming" uses the naming conventions above.</p>
             <p>
               <code>PSBP</code> is a pointfree effectful functional programming library, written using the <code>Lean</code> programming language.</p>
             <p>
