--- a/_out/html/html-multi/About/index.html
+++ b/_out/html/html-multi/About/index.html
@@ -805,27 +805,32 @@ window.onload = () => {
 <a href="https://github.com/LucDuponcheelAtGitHub/PSBP"><code>Lean</code> <code>PSBP</code> library</a>,
 in what follows, also simply called <code>PSBP</code>.</p>
             <p>
-              This document can be seen as a, somewhat special, not to say opinionated, programming course, especiallty useful for
-mathematicians and/or computer scientists, researchers as well as students, possible future researchers, who are
-interested in mathematical foundations of programming.</p>
+              <code>PSBP</code> stands for "Program Specification Based Programming".</p>
             <p>
-              The code of this document can be seen as a programming course for <code>Lean</code> itself. <code>Lean</code> turns out to be both a very
-demanding and very helpful student.</p>
+              This document can be seen as a, somewhat special, not to say opinionated, programming course.</p>
             <p>
-              When I worked with Doatse Swierstra at the University of Utrecht, he once told me that, apart from sound proving
+              The course is especially useful for mathematicians and/or computer scientists, researchers as well as students
+(possibly future researchers), who are interested in mathematical foundations of programming.</p>
+            <p>
+              The code of this document can be seen as a programming course for <code>Lean</code>.</p>
+            <p>
+              <code>Lean</code> turns out to be both a very demanding and very helpful student.</p>
+            <p>
+              When I worked with Doatse Swierstra at the University of Utrecht, he once said to me that, apart from sound proving
 techniques like "proof by induction", there is also this unsound proving technique "proof by intimidation". When no
 student complains about the correctness of a proof, the proof is correct. Of course, Doaitse did not apply this
-technique when teaching. <code>Lean</code> would be this very demanding student asking you for more and more into proof details
-before accepting the correctness of the proof. But <code>Lean</code> would also be this very helpful student that would be able to
-infer the proof details for you if you are stuck.</p>
+technique when teaching. <code>Lean</code> would be this very demanding student asking you for more and more proof details before
+accepting the correctness of the proof. But <code>Lean</code> would also be this very helpful student that would be able to infer
+the proof details for you if you are sick and tired to go into more and more proof details.</p>
             <p>
-              The first sections of this course do not always explain all concepts that they deal with. Please keep on reading. All
-concepts will, eventually, be explained. Starting from section "The PSBP Library type classes" the course is self
-contained and requires, at least in theory, no previous knowledge.</p>
+              The first sections of this course do not always explain all concepts they deal with. Please keep on reading. All
+concepts will, eventually, be explained. Starting from section "The PSBP Library type classes", the course is
+self-contained and requires, at least in theory, no previous knowledge.</p>
             <p>
-              So let's end this section with a, somewhat offensive, motivation to keep on reading this document.</p>
+              So let's end this section with a, somewhat offensive statement (I am sorry), hopefully motivation you to keep on reading
+this document.</p>
             <p>
-              If <code>Lean</code> can understand the course then you should be able to understand it as well.</p>
+              <strong>If <code>Lean</code> can understand the course then you should be able to understand it as well</strong>.</p>
             </section>
           <nav class="prev-next-buttons">
             <a class="local-button active" href="#" rel="prev" title=" PSBP Documentation"><span class="arrow">←</span><span class="where"> PSBP Documentation</span></a><a class="local-button active" href="Naming-conventions/#PSBP-Documentation--Naming-conventions" rel="next" title="2. Naming conventions"><span class="where">2. Naming conventions</span><span class="arrow">→</span></a></nav>
